--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ uvicorn = "^0.23.2"
 python-jose = {extras = ["cryptography"], version = "^3.1.0"}
 bcrypt = "^4.0.1"
 python-multipart = "^0.0.6"
+pytest = "^7.4.2"
+httpx = "^0.25.0"
+black = "^23.10.0"
 
 
 [build-system]
